# parser-combinators-haskell-trifecta-intro

./: .gitignore  README.md  default.nix  parsing.tex
.github/workflows/: release.yml
code/: Applicative.hs  ApplicativeExample.hs  Functor.hs  FunctorExample.hs  FunctorLift.hs
code/ipv4Address/: README.md  ipv4Address.cabal
code/ipv4Address/src/: Main.hs
code/phoneNumber/: README.md  phoneNumber.cabal
code/phoneNumber/src/: Main.hs
code/rational/: .gitignore  ChangeLog.md  package.yaml  rational.cabal
code/rational/app/: Main.hs
code/rational/src/: Lib.hs  Main.1.hs  Main.hs
code/rational/test/: Spec.hs
code/semanticVersions/: README.md  semanticVersions.cabal
code/semanticVersions/src/: Main.hs
